# RTinOneWeek

./: .gitignore  CMakeLists.txt
src/: Color.cpp  Color.hpp  ParameterHandler.cpp  ParameterHandler.hpp  Ray.cpp  Ray.hpp  Vec3.cpp  Vec3.hpp  globals.hpp  main.cpp
